fex few homepage issues, mainly on mobile devices

--- a/website/src/css/customTheme.scss
+++ b/website/src/css/customTheme.scss
@@ -519,6 +519,7 @@ div[class^="docSidebarContainer"] {
 
     &:after {
       background-size: 1.66rem 1.66rem;
+      margin-right: -6px;
     }
   }
 
