--- a/website/src/css/index.scss
+++ b/website/src/css/index.scss
@@ -49,13 +49,12 @@
   display: grid;
   padding: 0;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-gap: 15px;
+  grid-gap: 16px;
 
   .item {
     list-style: none;
 
-    a {
-      display: flex;
+    a img {
       border-radius: 18px;
       overflow: hidden;
     }
@@ -111,7 +110,7 @@
 .CrossPlatform {
   svg {
     max-width: 400px;
-    margin: -42px 0;
+    margin: -20px 0;
 
     text {
       fill: var(--ifm-color-content-secondary);
@@ -123,12 +122,18 @@
   .CrossPlatform .TwoColumns {
     grid-gap: 2rem;
   }
+
+  .CrossPlatform svg {
+    max-width: 100%;
+    margin: 0 auto;
+  }
 }
 
 @media only screen and (min-width: 481px) and (max-width: 960px) {
   .CrossPlatform .column.last {
-    width: 75%;
+    width: 86%;
     margin: 0 auto;
+    text-align: center;
   }
 }
 
@@ -285,7 +290,8 @@
   max-width: 1200px;
   margin: -10px auto 0;
 
-  .twitter-follow-button {
+  .twitter-follow-button,
+  .github-button {
     margin-right: 1rem;
   }
 }
